fix - tests